--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.8.4",
     "cheerio": "^1.0.0",
+    "dotenv": "^16.5.0",
     "leaflet": "^1.9.4",
     "path": "^0.12.7",
     "react": "^18.3.1",
@@ -54,10 +55,10 @@
   "devDependencies": {
     "@babel/preset-react": "^7.26.3",
     "@vitejs/plugin-react": "^4.2.1",
+    "concurrently": "^8.0.0",
     "gh-pages": "^6.3.0",
     "vite": "^5.4.6",
-    "vite-plugin-static-copy": "^1.0.1",
-    "concurrently": "^8.0.0"
+    "vite-plugin-static-copy": "^1.0.1"
   },
   "rules": {
     "no-console": "off"
