--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,35 +1,29 @@
-name: Deploy React App to S3
+name: Deploy React to GitHub Pages
 
 on:
   push:
     branches:
-      - main  # or your default branch
+      - main
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
-
     steps:
-      - name: 📥 Checkout repository
+      - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: 🟢 Set up Node.js
+      - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 18
 
-      - name: 📦 Install dependencies
+      - name: Install Dependencies
         run: npm install
 
-      - name: ⚙️ Build the React app
+      - name: Build
         run: npm run build
 
-      - name: ☁️ Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v2
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION }}
-
-      - name: 🚀 Sync files to S3
-        run: aws s3 sync dist/ s3://anil-w-bucket --delete
+      - name: Deploy to GitHub Pages
+        run: |
+          npm install -g gh-pages
+          npm run deploy
