--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "type": "module",
   "private": true,
-  "homepage": "https://shivbaba1983.github.io/cms",
+  "homepage": "https://shivbaba1983.github.io/heartbeat",
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@testing-library/jest-dom": "^5.17.0",
@@ -11,7 +11,6 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.8.4",
     "cheerio": "^1.0.0",
-    "dotenv": "^16.5.0",
     "leaflet": "^1.9.4",
     "path": "^0.12.7",
     "react": "^18.3.1",
