--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "private": true,
   "homepage": "https://shivbaba1983.github.io/heartbeat",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.797.0",
+    "@aws-sdk/protocol-http": "^3.370.0",
+    "@aws-sdk/signature-v4": "^3.370.0",
     "@emailjs/browser": "^4.4.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
