--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.3.1",
     "react-datepicker": "^8.3.0",
     "react-dom": "^18.3.1",
+    "react-fast-marquee": "^1.6.5",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "7.2.0",
     "react-scripts": "5.0.1",
