--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "recharts": "^2.15.2",
     "sass": "^1.85.0",
     "swiper": "^11.2.6",
+    "technicalindicators": "^3.1.0",
     "tesseract.js": "^6.0.1",
     "web-vitals": "^2.1.4",
     "yahoo-finance2": "^2.13.3"
