--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.8.4",
     "cheerio": "^1.0.0",
     "leaflet": "^1.9.4",
+    "papaparse": "^5.5.3",
     "path": "^0.12.7",
     "react": "^18.3.1",
     "react-datepicker": "^8.3.0",
