--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "papaparse": "^5.5.3",
     "path": "^0.12.7",
     "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-datepicker": "^8.3.0",
     "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.5",
@@ -26,7 +27,7 @@
     "react-scripts": "5.0.1",
     "recharts": "^2.15.2",
     "sass": "^1.85.0",
-    "swiper": "^11.2.6",
+    "swiper": "^11.2.10",
     "technicalindicators": "^3.1.0",
     "tesseract.js": "^6.0.1",
     "web-vitals": "^2.1.4",
@@ -61,6 +62,8 @@
   },
   "devDependencies": {
     "@babel/preset-react": "^7.26.3",
+    "@types/react": "^18.3.23",
+    "@types/react-dom": "^18.3.7",
     "@vitejs/plugin-react": "^4.2.1",
     "concurrently": "^8.0.0",
     "gh-pages": "^6.3.0",
